--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "livewire/livewire": "^2.2"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.5",
         "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
